@@ -249,7 +249,7 @@ asm_replace_list="aes-encrypt-internal.asm aes-decrypt-internal.asm \
 		md5-compress.asm memxor.asm \
 		salsa20-crypt.asm salsa20-core-internal.asm \
 		serpent-encrypt.asm serpent-decrypt.asm \
-		sha1-compress.asm machine.m4"
+		sha1-compress.asm sha256-compress.asm machine.m4"
 # Assembler files which generate additional object files if they are used.
 asm_optional_list=""
 
